fix thumbnail flicker on load

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,9 +66,6 @@ div.file-thumb {
 
 div.file-thumb img {
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 div.post-info {
@@ -107,8 +104,6 @@ div.post-message {
     margin: 10px;
 
     &__file-thumb {
-      width: 100%;
-      height: 100px;
       margin: 0 0 10px 0;
       a > img {
         max-height: 100px;
